PR 51183 David Binderman: simplify redundant conditional